--- a/kossie_coder_react_basic/package.json
+++ b/kossie_coder_react_basic/package.json
@@ -11,6 +11,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^20.2.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux": "^3.6.0",
     "axios": "^1.4.0",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
@@ -19,6 +26,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
