init: [김영진] React TypeScript; 타입스크립트버젼 es6로 적용 [REACT-TYPESCRIPT-XX]

--- a/react-typscript-app/tsconfig.json
+++ b/react-typscript-app/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES6",//"es5"
     "lib": [
+      "es6",//없었음
       "dom",
       "dom.iterable",
       "esnext"
